# image

./: .gitignore  CMakeLists.txt  README.md
src/: bmp.c  bmp.h  common.h  matrix.c  matrix.h  transform.c  transform.h
tests/: bmp.c
